gcc/testsuite/rust/rustc/ui/rfcs/rfc-2632-const-trait-impl/gate_dg.rs
// gate-test-const_closures

fn main() {
    (const || {})();
// { dg-error ".E0658." "" { target *-*-* } .-1 }
}

macro_rules! e {
    ($e:expr) => {}
}

e!((const || {}));
// { dg-error ".E0658." "" { target *-*-* } .-1 }

